Refactor definition building (#149)
* first pass on new definition api

* make interaction interfaces records and first pass on new registry

* update records

* fix invocation context

* add missing parameter methods

* rename

* add reflection wrapper

* add reflective descriptor

* update definitions

* update definitions

* fix shit ton of compile errors

* cleanup

* formatting

* remove since tag

* update documentation

* fix unit tests

* extract reflections out of InteractionRegistry

* Use Iterable instead of List and introduce CustomId#independent

* Restructure Definitions package and separate Context and SlashCommand

* remove Permissions feature interface

* Forbid Definition#invoke by user and fix bug in CustomID

* javadocs

* Yeah..

* docs

* more javadoc

* formatting

* fix java tests

* fix java tests

* fix wrong annotation

* fix codacy

* small changes

---------

Co-authored-by: Kaktushose <42280757+Kaktushose@users.noreply.github.com>
Co-authored-by: Kaktushose <faulie50@gmail.com>