@@ -2,7 +2,11 @@ package com.github.kaktushose.jda.commands.internal;
 
 import com.github.kaktushose.jda.commands.annotations.interactions.Permissions;
 import com.github.kaktushose.jda.commands.annotations.interactions.ReplyConfig;
-import com.github.kaktushose.jda.commands.reflect.MethodBuildContext;
+import com.github.kaktushose.jda.commands.definitions.description.MethodDescription;
+import com.github.kaktushose.jda.commands.definitions.description.ParameterDescription;
+import com.github.kaktushose.jda.commands.definitions.interactions.InteractionDefinition;
+import com.github.kaktushose.jda.commands.definitions.interactions.MethodBuildContext;
+import com.github.kaktushose.jda.commands.dispatching.reply.GlobalReplyConfig;
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.channel.middleman.GuildChannel;
 import net.dv8tion.jda.api.events.interaction.GenericInteractionCreateEvent;
@@ -12,14 +16,11 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Method;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
+
+import static com.github.kaktushose.jda.commands.definitions.interactions.command.ParameterDefinition.TYPE_MAPPINGS;
 
 /// Collection of helper methods that are used inside the framework.
-///
-/// @since 4.0.0
 @ApiStatus.Internal
 public final class Helpers {
 
@@ -69,36 +70,33 @@ public final class Helpers {
     /// @return a possibly-empty set of all permissions
     @NotNull
     public static Set<String> permissions(@NotNull MethodBuildContext context) {
-        Permissions permission = context.method().getAnnotation(Permissions.class);
+        var permission = context.method().annotation(Permissions.class);
 
-        if (permission != null) {
+        if (permission.isPresent()) {
             HashSet<String> mergedPermissions = new HashSet<>(context.permissions());
-            mergedPermissions.addAll(Set.of(permission.value()));
+            mergedPermissions.addAll(Set.of(permission.get().value()));
             return Collections.unmodifiableSet(mergedPermissions);
         }
         return context.permissions();
     }
 
-    /// Constructs the [com.github.kaktushose.jda.commands.reflect.interactions.ReplyConfig ReplyConfig] based on the
-    /// passed [Method].
-    ///
-    /// This will first attempt to use the [ReplyConfig] annotation of the method and then of the class. If neither is
-    /// present will fall back to the
-    /// [com.github.kaktushose.jda.commands.dispatching.reply.GlobalReplyConfig GlobalReplyConfig].
+    /// Constructs the [InteractionDefinition.ReplyConfig ReplyConfig] based on the passed [Method].
     ///
     /// @param method the [Method] to use
-    /// @return the [com.github.kaktushose.jda.commands.reflect.interactions.ReplyConfig ReplyConfig]
+    /// @return the [InteractionDefinition.ReplyConfig ReplyConfig]
+    /// @implNote This will first attempt to use the [ReplyConfig] annotation of the method and then of the class.
+    /// If neither is present will fall back to the [GlobalReplyConfig].
     @NotNull
-    public static com.github.kaktushose.jda.commands.reflect.interactions.ReplyConfig replyConfig(@NotNull Method method) {
+    public static InteractionDefinition.ReplyConfig replyConfig(@NotNull Method method) {
         var global = method.getDeclaringClass().getAnnotation(ReplyConfig.class);
         var local = method.getAnnotation(ReplyConfig.class);
 
         if (global == null && local == null)
-            return new com.github.kaktushose.jda.commands.reflect.interactions.ReplyConfig();
+            return new InteractionDefinition.ReplyConfig();
         if (local == null)
-            return new com.github.kaktushose.jda.commands.reflect.interactions.ReplyConfig(global);
+            return new InteractionDefinition.ReplyConfig(global);
 
-        return new com.github.kaktushose.jda.commands.reflect.interactions.ReplyConfig(local);
+        return new InteractionDefinition.ReplyConfig(local);
     }
 
     /// Checks if the given parameter is present at the [Method] at the given index.
@@ -107,30 +105,28 @@ public final class Helpers {
     /// @param index  the index the parameter is expected to be at
     /// @param type   the type of the parameter
     /// @return `true` if the parameter is present
-    public static boolean isIncorrectParameterType(@NotNull Method method, int index, @NotNull Class<?> type) {
-        if (!type.isAssignableFrom(method.getParameters()[index].getType())) {
+    public static boolean isIncorrectParameterType(@NotNull MethodDescription method, int index, @NotNull Class<?> type) {
+        if (!type.isAssignableFrom(List.copyOf(method.parameters()).get(index).type())) {
             log.error("An error has occurred! Skipping Interaction {}.{}:",
-                    method.getDeclaringClass().getSimpleName(),
-                    method.getName(),
+                    method.declaringClass().getName(),
+                    method.name(),
                     new IllegalArgumentException(String.format("%d. parameter must be of type %s", index + 1, type.getSimpleName())));
             return true;
         }
         return false;
     }
 
-    /// Checks if a [Method] has the given parameter count.
-    ///
-    /// @param count the parameter count
-    /// @return `true` if the method has the given parameter count
-    public static boolean isIncorrectParameterAmount(@NotNull Method method, int count) {
-        if (method.getParameters().length != count) {
+    public static boolean checkSignature(MethodDescription method, Collection<Class<?>> methodSignature) {
+        var parameters = method.parameters().stream()
+                .map(ParameterDescription::type)
+                .map(it -> TYPE_MAPPINGS.getOrDefault(it, it)).toList();
+        if (!parameters.equals(methodSignature)) {
             log.error("An error has occurred! Skipping Interaction {}.{}:",
-                    method.getDeclaringClass().getSimpleName(),
-                    method.getName(),
-                    new IllegalArgumentException(String.format(
-                            "Invalid amount of parameters!. Expected: %d Actual: %d",
-                            count,
-                            method.getParameters().length
+                    method.declaringClass().getName(),
+                    method.name(),
+                    new IllegalArgumentException("Incorrect method signature!\nExpected: %s\nActual:   %s".formatted(
+                            methodSignature.stream().toList(),
+                            method.parameters().stream().map(ParameterDescription::type).toList()
                     )));
             return true;
         }
